AG-40275 Fixed corners of Actions is not rounded
Squashed commit of the following:

commit 5db239689e18f8a28b40345d47e72d1e87cbd51a
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Fri Mar 21 11:01:06 2025 +0500

    AG-40275 Fixed corners of Actions is not rounded

--- a/src/options/components/Exclusions/Actions/actions.pcss
+++ b/src/options/components/Exclusions/Actions/actions.pcss
@@ -5,15 +5,11 @@
     }
 
     .select__list {
-        right: 24px;
-        width: 180px;
-        border-radius: 0;
-        box-shadow: var(--small-light-shadow-br);
+        /* 9px is design specified value */
+        top: calc(100% + 9px);
     }
 
     .select__item {
         padding: 16px;
-        font-size: 14px;
-        line-height: 16px;
     }
 }
